cilium_network/manifests/03-lb-test.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: lb-test
  labels: &labels
    app.kubernetes.io/name: lb-test
    app.kubernetes.io/version: "1.27.5"
spec:
  containers:
  - name: nginx
    image: nginx:1.27.5
    resources:
      limits:
        memory: "128Mi"
        cpu: "200m"
      requests:
        memory: "64Mi"
        cpu: "100m"
    ports:
      - containerPort: 80
        name: http
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: lb-test-svc
  labels: &labels
    app.kubernetes.io/name: lb-test
    app.kubernetes.io/version: "1.27.5"
spec:
  type: LoadBalancer
  selector: *labels
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
