cilium_network/manifests/np-allow-dnstools.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dnstools-to-app1
spec:
  podSelector:
    matchLabels:
      app: app1
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: dnstools
    ports:
    - protocol: TCP
      port: 80
