cilium_network/manifests/np-deny-all.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-to-app1
spec:
  podSelector:
    matchLabels:
      app: app1
  policyTypes:
  - Ingress
